
Version 1.2.3

    - Don't send LOG_DEBUG messages to syslog unless --debug flag given.
    - Fix race condition when generating HTTP Date: headers.
    - Allow command line flags to be specified in /etc/fstab.

Version 1.2.2 (r316) released 20 Dec 2008

    - Added `--compress' flag enabling compression of file blocks.
      Note: compressed blocks are not compatible with versions < 1.2.2.
    - Disable the MD5 cache when the `--readOnly' flag is given.
    - Make `--md5CacheTime=0' really mean `infinite' as promised in man page.
    - Added `--debug-http' flag for debugging HTTP headers.
    - Don't let block and MD5 caches be configured larger than necessary.
    - Fixed a few minor issues with statistics reporting.

Version 1.2.1 (r300) released 23 Oct 2008

    - Added `--erase' and `--quiet' command line flags.
    - Added `--blockCacheSync' command line flag.
    - Fixed extra copying slowdown when using large block sizes (issue #5).
    - Eliminate extra copy of blocks when written by block_cache worker threads.
    - Fixed bug in EC layer where dirty data might not be flushed at shutdown.
    - Fixed bug where 'http' was shown instead of 'https' in mount(8) output
      when the --ssl flag was given.

Version 1.2.0 (r248) released 12 Sep 2008

    - Use new custom hash table implementation; this removes glib dependency.
    - Replaced `--assumeEmpty' flag with safer and more useful `--listBlocks'.
    - Fixed bug where the zero block optimization got disabled when the
      MD5 cache was disabled.
    - Supply `-o allow_other' option by default, since default mode is 0600.
    - Fixed bug where cp(1)'ing the backed file gave `Illegal seek' error.
    - Use FUSE version 25 API so code builds on older O/S distributions.

Version 1.1.1 (r202) released 5 Aug 2008

    - Added `--ssl' as an alias for `--baseURL https://s3.amazonaws.com/'.
    - Added `--insecure' and `--cacert' flags to configure cURL SSL checks.